force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__PPM_Project__c/agf__PPM_Project__c.object-meta.xml
<CustomObject>
    <label>Project</label>
    <nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>