force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__PPM_Project__c/fields/agf__Category__c.field-meta.xml
<CustomField>
    <fullName>agf__Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Feature</fullName>
            </value>
            <value>
                <fullName>Tech Debt</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>