force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__PPM_Project__c/fields/agf__Delivery_Scrum_Team__c.field-meta.xml
<CustomField>
    <fullName>agf__Delivery_Scrum_Team__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Delivery Scrum Team</label>
    <referenceTo>agf__ADM_Scrum_Team__c</referenceTo>
    <relationshipLabel>Projects</relationshipLabel>
    <relationshipName>ProjectsDTL</relationshipName>
    <type>Lookup</type>
</CustomField>