force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__PPM_Project__c/fields/agf__Development_Lead__c.field-meta.xml
<CustomField>
    <fullName>agf__Development_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Development Lead</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Projects_User2</relationshipName>
    <type>Lookup</type>
</CustomField>