force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__PPM_Project__c/fields/agf__Path_to_Green__c.field-meta.xml
<CustomField>
    <fullName>agf__Path_to_Green__c</fullName>
    <label>Path to Green</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>