force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__PPM_Project__c/fields/agf__Planned_End_Date__c.field-meta.xml
<CustomField>
    <fullName>agf__Planned_End_Date__c</fullName>
    <label>Planned End Date</label>
    <type>Date</type>
</CustomField>