force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__PPM_Project__c/fields/agf__Product_Owner_Project_Object__c.field-meta.xml
<CustomField>
    <fullName>agf__Product_Owner_Project_Object__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Projects_PO</relationshipName>
    <type>Lookup</type>
</CustomField>