force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__PPM_Project__c/fields/agf__Project_Health__c.field-meta.xml
<CustomField>
    <fullName>agf__Project_Health__c</fullName>
    <description>Current health of the Project. Project Health Color field will change automatically when this field is changed.</description>
    <inlineHelpText>Current health of the Project. Project Health Color field will change automatically when this field is changed.</inlineHelpText>
    <label>Project Health</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Requested</fullName>
                <color>#9999FF</color>
                <label>Requested</label>
            </value>
            <value>
                <fullName>Discovery</fullName>
                <color>#6600CC</color>
                <label>Discovery</label>
            </value>
            <value>
                <fullName>Information Needed</fullName>
                <color>#6666CC</color>
                <label>Information Needed</label>
            </value>
            <value>
                <fullName>Ready for Acceptance</fullName>
                <color>#EFAE73</color>
                <label>Ready for Acceptance</label>
            </value>
            <value>
                <fullName>Not Started</fullName>
                <color>#DDDDDD</color>
                <label>Not Started</label>
            </value>
            <value>
                <fullName>Watch</fullName>
                <color>#F3D904</color>
                <label>Watch</label>
            </value>
            <value>
                <fullName>Blocked</fullName>
                <color>#CC0000</color>
                <label>Blocked</label>
            </value>
            <value>
                <fullName>On Track</fullName>
                <color>#419249</color>
                <label>On Track</label>
            </value>
            <value>
                <fullName>On Hold</fullName>
                <color>#996633</color>
                <label>On Hold</label>
            </value>
            <value>
                <fullName>Completed</fullName>
                <color>#3366FF</color>
                <label>Completed</label>
            </value>
            <value>
                <fullName>Duplicate</fullName>
                <color>#660000</color>
                <label>Duplicate</label>
            </value>
            <value>
                <fullName>Canceled - Deferred / Deprioritized</fullName>
                <color>#333333</color>
                <label>Canceled - Deferred / Deprioritized</label>
            </value>
            <value>
                <fullName>Canceled - Handled as a ticket</fullName>
                <color>#000000</color>
                <label>Canceled - Handled as a ticket</label>
            </value>
            <value>
                <fullName>Canceled - No Longer Needed</fullName>
                <color>#666666</color>
                <label>Canceled - No Longer Needed</label>
            </value>
            <value>
                <fullName>Carry-Over</fullName>
                <color>#B6E32E</color>
                <label>Carry-Over</label>
            </value>
            <value>
                <fullName>Canceled</fullName>
                <color>#000000</color>
                <label>Canceled</label>
            </value>
            <value>
                <fullName>Never</fullName>
                <color>#000000</color>
                <label>Never</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>