force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__PPM_Project__c/fields/agf__Project_Management_Notes__c.field-meta.xml
<CustomField>
    <fullName>agf__Project_Management_Notes__c</fullName>
    <inlineHelpText>field for TPM&apos;s/Project management to notate next steps, upcoming work, top of mind things, whatever they need, don&apos;t forget the date!</inlineHelpText>
    <label>Project Management Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>