force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__PPM_Project__c/fields/agf__Project_Management_Notes_Date__c.field-meta.xml
<CustomField>
    <fullName>agf__Project_Management_Notes_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <description>TPM notes as of this date</description>
    <inlineHelpText>TPM notes as of this date</inlineHelpText>
    <label>Project Management Notes Date</label>
    <type>Date</type>
</CustomField>