force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__PPM_Project__c/fields/agf__Project_Manager__c.field-meta.xml
<CustomField>
    <fullName>agf__Project_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Identifies the Project Manager responsible for the Project.</description>
    <inlineHelpText>Select the Project Manager&apos;s name from the Lookup list.</inlineHelpText>
    <label>Project Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Projects</relationshipName>
    <type>Lookup</type>
</CustomField>