force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__PPM_Project__c/fields/agf__Project_Summary__c.field-meta.xml
<CustomField>
    <fullName>agf__Project_Summary__c</fullName>
    <label>Project Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>