force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__PPM_Project__c/fields/agf__Slippage_Comment__c.field-meta.xml
<CustomField>
    <fullName>agf__Slippage_Comment__c</fullName>
    <description>TPM insights/comments on date slippage</description>
    <inlineHelpText>TPM insights/comments on date slippage</inlineHelpText>
    <label>Slippage Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>