force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__PPM_Project__c/fields/agf__Slippage_Reason__c.field-meta.xml
<CustomField>
    <fullName>agf__Slippage_Reason__c</fullName>
    <label>Slippage Reason</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Budget</fullName>
            </value>
            <value>
                <fullName>Resources</fullName>
            </value>
            <value>
                <fullName>Scope Change</fullName>
            </value>
            <value>
                <fullName>Technical</fullName>
            </value>
            <value>
                <fullName>Vendor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>